exports[`FLOWDESIGNER_FLOW_ADD_ELEMENTS should batch many elements creation 1`] = `
Object {
  "childrens": Object {
    "node2": Object {},
    "nodeId": Object {},
  },
  "in": Object {
    "node2": Object {},
    "nodeId": Object {},
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "node2": Object {
      "data": Object {
        "description": "",
        "label": "",
        "properties": Object {},
      },
      "getNodeType": [Function],
      "getPosition": [Function],
      "getSize": [Function],
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": 10,
          "width": 10,
        },
        "nodeType": undefined,
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "properties": Object {},
      },
      "id": "node2",
      "type": undefined,
    },
    "nodeId": Object {
      "data": Object {
        "description": "",
        "label": "",
        "properties": Object {},
      },
      "getNodeType": [Function],
      "getPosition": [Function],
      "getSize": [Function],
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": 10,
          "width": 10,
        },
        "nodeType": undefined,
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "properties": Object {},
      },
      "id": "nodeId",
      "type": undefined,
    },
  },
  "out": Object {
    "node2": Object {},
    "nodeId": Object {
      "portId": Object {},
    },
  },
  "parents": Object {
    "node2": Object {},
    "nodeId": Object {},
  },
  "ports": Object {
    "portId": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "getIndex": [Function],
      "getPortDirection": [Function],
      "getPortFlowType": [Function],
      "getPortType": [Function],
      "getPosition": [Function],
      "graphicalAttributes": Object {
        "portType": undefined,
        "position": Object {
          "x": undefined,
          "y": undefined,
        },
        "properties": Object {
          "index": 0,
          "type": "SOURCE",
        },
      },
      "id": "portId",
      "nodeId": "nodeId",
      "setIndex": [Function],
      "setPosition": [Function],
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_FLOW_ADD_ELEMENTS should batch one element creation 1`] = `
Object {
  "childrens": Object {
    "nodeId": Object {},
  },
  "in": Object {
    "nodeId": Object {},
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {
      "data": Object {
        "description": "",
        "label": "",
        "properties": Object {},
      },
      "getNodeType": [Function],
      "getPosition": [Function],
      "getSize": [Function],
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": 10,
          "width": 10,
        },
        "nodeType": undefined,
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "properties": Object {},
      },
      "id": "nodeId",
      "type": undefined,
    },
  },
  "out": Object {
    "nodeId": Object {},
  },
  "parents": Object {
    "nodeId": Object {},
  },
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_FLOW_ADD_ELEMENTS should handle throwing sub reducer by returning old state 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {},
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_FLOW_LOAD should reset old flow state and load news not touching flow config should load elements 1`] = `
Object {
  "childrens": Object {
    "node2": Object {},
    "nodeId": Object {},
  },
  "in": Object {
    "node2": Object {},
    "nodeId": Object {},
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "node2": Object {
      "data": Object {
        "description": "",
        "label": "",
        "properties": Object {},
      },
      "getNodeType": [Function],
      "getPosition": [Function],
      "getSize": [Function],
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": 10,
          "width": 10,
        },
        "nodeType": undefined,
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "properties": Object {},
      },
      "id": "node2",
      "type": undefined,
    },
    "nodeId": Object {
      "data": Object {
        "description": "",
        "label": "",
        "properties": Object {},
      },
      "getNodeType": [Function],
      "getPosition": [Function],
      "getSize": [Function],
      "graphicalAttributes": Object {
        "description": "",
        "label": "",
        "nodeSize": Object {
          "height": 10,
          "width": 10,
        },
        "nodeType": undefined,
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "properties": Object {},
      },
      "id": "nodeId",
      "type": undefined,
    },
  },
  "out": Object {
    "node2": Object {},
    "nodeId": Object {
      "portId": Object {},
    },
  },
  "parents": Object {
    "node2": Object {},
    "nodeId": Object {},
  },
  "ports": Object {
    "portId": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "getIndex": [Function],
      "getPortDirection": [Function],
      "getPortFlowType": [Function],
      "getPortType": [Function],
      "getPosition": [Function],
      "graphicalAttributes": Object {
        "portType": undefined,
        "position": Object {
          "x": undefined,
          "y": undefined,
        },
        "properties": Object {
          "index": 0,
          "type": "SOURCE",
        },
      },
      "id": "portId",
      "nodeId": "nodeId",
      "setIndex": [Function],
      "setPosition": [Function],
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_PAN_TO set a calculated transformation into transformToApply  1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {},
  "out": Object {},
  "parents": Object {},
  "ports": Object {},
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": Transform {
    "k": 1,
    "x": -400,
    "y": -400,
  },
}
`;
